Closed Bug 1178172 Opened 9 years ago Closed 9 years ago

Fix all compile errors in dom/base on non-unified build

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: hiro, Assigned: hiro)

References

Details

Attachments

(1 file, 2 obsolete files)

Attached patch Fix (obsolete) — Splinter Review
I've been suffering from compile error each time I add (a) file(s) into dom/base.
So I'm going to fix all errors at least in dom/base.
Comment on attachment 8627096 [details] [diff] [review]
Fix

:baku, could you please review this?

B2G ICS opt/debug and B2G L opt failed the the try result, but it seems OK because those platforms fail on other try runs too.

An example: https://treeherder.mozilla.org/#/jobs?repo=try&revision=de83156d7de9
Attachment #8627096 - Flags: review?(amarchesini)
Comment on attachment 8627096 [details] [diff] [review]
Fix

Clearing review request due to a crash on a web-platform test </html/semantics/embedded-content/the-img-element/current-pixel-density/basic.html>
Attachment #8627096 - Flags: review?(amarchesini)
(In reply to Hiroyuki Ikezoe (:hiro) from comment #3)
> Clearing review request due to a crash on a web-platform test
> </html/semantics/embedded-content/the-img-element/current-pixel-density/
> basic.html>

This failure is not your fault.  See https://groups.google.com/forum/#!topic/mozilla.dev.platform/Ph5EusVcjJA
Nathan, thanks for the info.
I was very confused, and suspected there might be a hidden serious bug in dom/base related to namespace mistake or something...
Attached patch Fix v2 (obsolete) — Splinter Review
https://treeherder.mozilla.org/#/jobs?repo=try&revision=f3bc85df3fdb

I did a try for safety.  There are all known oranges.

This patch is slightly different from the previous one, just removed a modification in dom/workers/ file (WorkerScope.cpp).

I should note about the change in ipc/glue/BackgroundUtils.h in the patch. Actually this file does not sit in dom/base but nsHostObjectURI.cpp and nsJSEnvironment.cpp include the header file so we need to fix the header too.
Assignee: nobody → hiikezoe
Attachment #8627096 - Attachment is obsolete: true
Attachment #8628061 - Flags: review?(amarchesini)
Comment on attachment 8628061 [details] [diff] [review]
Fix v2

Review of attachment 8628061 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/base/PerformanceEntry.cpp
@@ +6,5 @@
>  
>  #include "PerformanceEntry.h"
>  #include "nsIURI.h"
>  #include "mozilla/dom/PerformanceEntryBinding.h"
> +#include "MainThreadUtils.h"

can you sort these headers in this way:

PerformanceEntry.h
MainThreadUtils.h
mozilla/dom//PerforamnceEntryBinding.h
nsIURI.h

::: dom/base/PerformanceEntry.h
@@ +7,5 @@
>  #ifndef mozilla_dom_PerformanceEntry_h___
>  #define mozilla_dom_PerformanceEntry_h___
>  
>  #include "nsDOMNavigationTiming.h"
> +#include "nsWrapperCache.h"

alphabetic order: nsString.h before nsWrapperCache.h

::: dom/base/PerformanceMark.cpp
@@ +5,5 @@
>   * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
>  
>  #include "PerformanceMark.h"
>  #include "mozilla/dom/PerformanceMarkBinding.h"
> +#include "MainThreadUtils.h"

move it to line 8

::: dom/base/PerformanceMeasure.cpp
@@ +5,5 @@
>   * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
>  
>  #include "PerformanceMeasure.h"
>  #include "mozilla/dom/PerformanceMeasureBinding.h"
> +#include "MainThreadUtils.h"

move to line 8.

::: dom/base/nsDOMMutationObserver.cpp
@@ +341,5 @@
>    Disconnect(true);
>  }
>  
>  void
> +nsAnimationReceiver::RecordAnimationMutation(mozilla::dom::Animation* aAnimation,

what about adding:

using mozilla::dom::Animation at the top and then use |Animation| everywhere?

::: ipc/glue/BackgroundUtils.h
@@ +11,5 @@
>  #include "nsCOMPtr.h"
>  #include "nscore.h"
>  
>  class nsIPrincipal;
> +class nsILoadInfo;

here we want an alphabetic order. invert these 2 lines.
Attachment #8628061 - Flags: review?(amarchesini) → review+
Attached patch Fix v3Splinter Review
Addressed all comments.

Thanks!
Attachment #8628061 - Attachment is obsolete: true
Attachment #8628535 - Flags: review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/4eade4f528d4
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: