Bug 1178172 - Fix all compile errors in dom/base on non-unified build. r=baku